--- a/mern-shop/clientside/package.json
+++ b/mern-shop/clientside/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.0",
+    "stripe": "^8.191.0",
     "styled-components": "^5.3.3",
     "typescript": "^4.4.4",
     "universal-cookie": "^4.0.4",
@@ -51,6 +52,8 @@
     ]
   },
   "devDependencies": {
+    "@stripe/react-stripe-js": "^1.6.0",
+    "@stripe/stripe-js": "^1.21.1",
     "@types/react": "^17.0.35",
     "@types/react-dom": "^17.0.11",
     "@types/styled-components": "^5.1.15",
