--- a/mern-shop/serverside/package.json
+++ b/mern-shop/serverside/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.13",
+    "nodemailer": "^6.7.2",
     "stripe": "^8.191.0"
   }
 }
