--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,11 +23,21 @@ jobs:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
       -
-        name: Build and push
-        id: docker_build
+        # name: Build and push
+        # id: docker_build
+        # uses: docker/build-push-action@v2
+        # with:
+        #   push: true
+        #   tags: usr/app:latest
+      - name: Build
+        run:  go build -v ./...
+
+      - name: Build and push Docker image
+        id:   docker_build
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: usr/app:latest
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/${{ github.event.repository.name }}:latest
+
 
          
