--- a/mern-shop/.github/workflows/docker-image.yml
+++ b/mern-shop/.github/workflows/docker-image.yml
@@ -28,7 +28,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/${{ github.event.repository.name }}:latest
+          tags: usr/app:latest
 
 
          
