--- a/mern-shop/.github/workflows/docker-image.yml
+++ b/mern-shop/.github/workflows/docker-image.yml
@@ -28,7 +28,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: usr/app:latest
+          tags: usr/app:lates
 
 
          
