--- a/mern-shop/clientside/package.json
+++ b/mern-shop/clientside/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tensorflow-models/blazeface": "^0.0.7",
     "@tensorflow/tfjs": "^3.11.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -27,6 +28,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "lint": "eslint \"**/*.{js,ts,tsx}\"",
+    "format": "eslint \"**/*.{js,ts,tsx}\"  --fix",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -37,8 +40,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run test",
-      "pre-push": "npm run build"
+      "pre-commit": "npm run lint && npm run build && git add .",
+      "pre-push": ""
     }
   },
   "browserslist": {
