--- a/mern-shop/clientside/package.json
+++ b/mern-shop/clientside/package.json
@@ -30,7 +30,8 @@
     "test": "react-scripts test",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
     "format": "eslint \"**/*.{js,ts,tsx}\"  --fix",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
