--- a/mern-shop/clientside/package.json
+++ b/mern-shop/clientside/package.json
@@ -10,7 +10,6 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/react-router-dom": "^5.3.2",
     "dotenv": "^10.0.0",
-    "husky": "^7.0.4",
     "lint-staged": "^12.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -32,19 +31,19 @@
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
     "format": "eslint \"**/*.{js,ts,tsx}\"  --fix",
     "eject": "react-scripts eject",
-    "prepare": "husky install .config/husky"
+    "prepare": "husky install"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint && npm run test && git add .",
+      "pre-push": "npm run lint"
+    }
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
     ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint && npm run build && git add .",
-      "pre-push": ""
-    }
   },
   "browserslist": {
     "production": [
@@ -72,6 +71,6 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "husky": "^7.0.0"
+    "husky": "^7.0.4"
   }
 }
